vlib/v/checker/tests/import_syntax_err.out
vlib/v/checker/tests/import_syntax_err.v:1:12: error: module syntax error, please use `x.y.z`
    1 | import time, os
      |            ^
    2 | fn main() {
    3 |     println(time.now())
